<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/llBluetoothName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/str_bluetooth_name"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/edBluetoothName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="2dp"
                android:text="@string/str_berry_med"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llBluetoothName"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnBluetoothToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/turn_on_bluetooth"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnSearchOximeters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onClick"
                android:text="@string/search_oximeters"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvStatusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llBtns"
            android:gravity="center"
            android:padding="10dp"
            android:text="____"/>

        <LinearLayout
            android:id="@+id/rlInfoBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStatusBar"
            android:onClick="onClick"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/turn_on_notify"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvParamsBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <SurfaceView
            android:id="@+id/sfvSpO2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:background="@color/app_background_color"/>

        <LinearLayout
            android:id="@+id/llModifyBtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">
            <EditText
                android:id="@+id/etNewBtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/strHintModifyName"/>
            <Button
                android:id="@+id/btnModifyBtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/strModify"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom">
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/strUpdate"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnVerInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/strVerInfo"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/tvGetSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/str_get_source_code"
                android:textColor="@android:color/holo_blue_dark"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
